--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,24 @@
-pipeline  {
-    agent any name 
-	stages  {
-	    stage ("welcome to jenkins") {
-		  steps {
-		     script {
-			    println  "hi all ,welcome to jenkins automation "
-				}
-			}
-		}
-	}
+pipeline {
+   agent { label 'master' }
+   stages {
+       stage('write') {
+           steps {
+               script {
+                   def date = new Date()
+                   def data = "Hello World\nSecond line\n" + date
+                   writeFile(file: 'zorg.txt', text: data)
+                   sh "ls -l"
+               }
+           }
+       }
+       stage('read') {
+           steps {
+               script {
+                   def data = readFile(file: 'zorg.txt')
+                   println(data)
+               }
+           }
+       }
+   }
 }
+
